Поменял заглушку UI identity server

--- a/WorkTime.AuthService.WebApi/Views/Shared/_ScopeListItem.cshtml
+++ b/WorkTime.AuthService.WebApi/Views/Shared/_ScopeListItem.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model Authorization.IdentityServer.Consent.ScopeViewModel
+﻿@model WorkTime.AuthService.WebApi.Consent.ScopeViewModel
 
 <li class="list-group-item">
     <label>
@@ -31,4 +31,4 @@
             <label for="scopes_@Model.Value">@Model.Description</label>
         </div>
     }
-</li>*@
+</li>
