--- a/WorkTime.AuthService.WebApi/Views/Account/Login.cshtml
+++ b/WorkTime.AuthService.WebApi/Views/Account/Login.cshtml
@@ -1,69 +1,72 @@
-@model  WorkTime.AuthService.WebApi.Account.LoginViewModel
+@model WorkTime.AuthService.WebApi.Account.LoginViewModel
 
-<div class="login-page">
-    <div class="lead">
+<div class = "login-page">
+    <div class = "lead">
         <h1>Login</h1>
         <p>Choose how to login</p>
     </div>
 
-    <partial name="_ValidationSummary"/>
+    <partial name = "_ValidationSummary"/>
 
-    <div class="row">
+    <div class = "row">
 
         @if (Model.EnableLocalLogin)
         {
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-header">
+            <div class = "col-sm-6">
+                <div class = "card">
+                    <div class = "card-header">
                         <h2>Local Account</h2>
                     </div>
 
-                    <div class="card-body">
-                        <form asp-route="Login">
-                            <input asp-for="ReturnUrl"
-                                   type="hidden"/>
+                    <div class = "card-body">
+                        <form asp-route = "Login">
+                            <input asp-for = "ReturnUrl"
+                                   type = "hidden"/>
 
-                            <div class="form-group">
-                                <label asp-for="Username"></label>
-                                <input asp-for="Username"
+                            <div class = "form-group">
+                                <label asp-for = "Username"></label>
+                                <input asp-for = "Username"
                                        autofocus
-                                       class="form-control"
-                                       placeholder="Username">
+                                       class = "form-control"
+                                       placeholder = "Username">
                             </div>
-                            <div class="form-group">
-                                <label asp-for="Password"></label>
-                                <input asp-for="Password"
-                                       autocomplete="off"
-                                       class="form-control"
-                                       placeholder="Password"
-                                       type="password">
+                            <div class = "form-group">
+                                <label asp-for = "Password"></label>
+                                <input asp-for = "Password"
+                                       autocomplete = "off"
+                                       class = "form-control"
+                                       placeholder = "Password"
+                                       type = "password">
                             </div>
                             @if (Model.AllowRememberLogin)
                             {
-                                <div class="form-group">
-                                    <div class="form-check">
-                                        <input asp-for="RememberLogin"
-                                               class="form-check-input">
-                                        <label asp-for="RememberLogin"
-                                               class="form-check-label">
+                                <div class = "form-group">
+                                    <div class = "form-check">
+                                        <input asp-for = "RememberLogin"
+                                               class = "form-check-input">
+                                        <label asp-for = "RememberLogin"
+                                               class = "form-check-label">
                                             Remember My Login
                                         </label>
                                     </div>
                                 </div>
                             }
-
                             <div>
-                                <p>The default users are <b>admin</b>, password: <b>123qwe</b></p>
+                                <h4>
+                                    The default users are
+                                    <strong>"admin"</strong>,
+                                    password:
+                                    <strong>"123qwe"</strong>
+                                </h4>
                             </div>
-
-                            <button class="btn btn-primary"
-                                    name="button"
-                                    value="login">
+                            <button class = "btn btn-primary"
+                                    name = "button"
+                                    value = "login">
                                 Login
                             </button>
-                            <button class="btn btn-secondary"
-                                    name="button"
-                                    value="cancel">
+                            <button class = "btn btn-secondary"
+                                    name = "button"
+                                    value = "cancel">
                                 Cancel
                             </button>
                         </form>
@@ -74,21 +77,21 @@
 
         @if (Model.VisibleExternalProviders.Any())
         {
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-header">
+            <div class = "col-sm-6">
+                <div class = "card">
+                    <div class = "card-header">
                         <h2>External Account</h2>
                     </div>
-                    <div class="card-body">
-                        <ul class="list-inline">
+                    <div class = "card-body">
+                        <ul class = "list-inline">
                             @foreach (var provider in Model.VisibleExternalProviders)
                             {
-                                <li class="list-inline-item">
-                                    <a asp-action="Challenge"
-                                       asp-controller="External"
-                                       asp-route-returnUrl="@Model.ReturnUrl"
-                                       asp-route-scheme="@provider.AuthenticationScheme"
-                                       class="btn btn-secondary">
+                                <li class = "list-inline-item">
+                                    <a asp-action = "Challenge"
+                                       asp-controller = "External"
+                                       asp-route-returnUrl = "@Model.ReturnUrl"
+                                       asp-route-scheme = "@provider.AuthenticationScheme"
+                                       class = "btn btn-secondary">
                                         @provider.DisplayName
                                     </a>
                                 </li>
@@ -101,7 +104,7 @@
 
         @if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
         {
-            <div class="alert alert-warning">
+            <div class = "alert alert-warning">
                 <strong>Invalid login request</strong>
                 There are no login schemes configured for this request.
             </div>
